fix: wrap dos apoiadores, tamanho fixo dos cases

--- a/assets/css/page-home.css
+++ b/assets/css/page-home.css
@@ -504,7 +504,6 @@ p{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 5rem;
     color: #0076C1;
 
 }
@@ -555,7 +554,9 @@ p{
 }
 
 .mySlides {
-    display: none
+    display: none;
+    width: 45rem;
+    height: 37rem;
 }
 
 .name-sucess-case{
@@ -606,4 +607,5 @@ p{
 .group-images-section5-div{
     display:flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
